8034206: Make parts of code pipeline reusable in order to facilitate faster warmup and faster lazy compilation
Reviewed-by: hannesw, attila